# woz-claw

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.sandbox/skills/demo-user/: skills.yaml
.sandbox/skills/global/: skills.yaml
.workdir/: README.md  tetris.py
.workdir/birthday-vue/: index.html  package-lock.json  package.json
.workdir/birthday-vue/src/: App.vue
.workdir/rag-demo/: README.md  requirements.txt  sample.txt
.workdir/rag-demo/app/: main.py
.workdir/rag-demo/docs/: MARKDOWN-REPAIR-NOTES.md  chunker-improvement-plan.md  (+1 more)
.workdir/reports/: knowledge-base-requirements-analysis-humanized.md  knowledge-base-requirements-analysis.md
.workdir/snake-game/: index.html  style.css
.workdir/snake-game-vue/: index.html  package-lock.json  package.json  vite.config.js.timestamp-1777018176847-41471bf166ae2.mjs
.workdir/tetris-game/: index.html  style.css  tetris.js
.workdir/tetris-vue/: index.html  package-lock.json  package.json
config/: path.yaml  sandbox.yaml
config/demo-user/: command_policy.json
memory/demo-user/: conversations.json  memory.md
skills/demo-user/: skills.yaml
src/agent_memory_demo/: __init__.py  agent.py  app.py  config.py  memory_store.py  service.py
src/wozclaw/: __init__.py  agent.py  app.py  config.py  memory_store.py  print_system_prompt.py  service.py
tests/: test_agent_prompt.py  test_app_api.py  test_bash_interactive.py  test_chat_service.py  test_frontend_rendering.py  test_llm_config.py  test_memory_store.py
workdir/snake-game/: README.md  game.js  玩法介绍.md
(+203 files in other folders)
