[project]
name = "WozClaw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"jinja2>=3.1.4",
	"agentscope>=1.0.18",
	"pydantic>=2.9.0",
	"pyyaml>=6.0.0",
	"pywin32>=311; platform_system == 'Windows'",
	"python-dotenv>=1.0.1",
	"uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/wozclaw"]
